# Dino

./: README.md  pyproject.toml
src/app/: __main__.py  newDinoGame.py
