[tool.poetry]
name = "dino"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
chrome-trex = {git = "https://github.com/ArielMAJ/chrome-trex-rush", rev = "fix/multi-dino-game"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
